--- a/services/s3-to-es-forwarder/Makefile
+++ b/services/s3-to-es-forwarder/Makefile
@@ -1,3 +1,5 @@
-deploy_qa:
-	sam build && \
-	AWS_PROFILE=qa sam deploy --config-env qa
+deploy_qa: build
+	AWS_PROFILE=qa sam deploy --config-env qa --parameter-overrides "ParameterKey=AwsEnvironment,ParameterValue=qa"
+
+build:
+	sam build
