--- a/services/s3-to-es-forwarder/samconfig.toml
+++ b/services/s3-to-es-forwarder/samconfig.toml
@@ -3,7 +3,7 @@ version = 0.1
 [qa]
 [qa.deploy]
 [qa.deploy.parameters]
-stack_name = "S3ToEsForwarder"
+stack_name = "qa-s3-to-es-forwarder"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ei1wdt2g2rw4"
 s3_prefix = "s3-to-es-forwarder"
 region = "us-east-1"
