--- a/services/s3-to-es-forwarder/Makefile
+++ b/services/s3-to-es-forwarder/Makefile
@@ -1,5 +1,8 @@
+build:
+	sam build
+
 deploy_qa: build
 	AWS_PROFILE=qa sam deploy --config-env qa --parameter-overrides "ParameterKey=AwsEnvironment,ParameterValue=qa"
 
-build:
-	sam build
+invoke: build
+	sam local invoke -e events/s3_put.json
