--- a/infra/soar/es.yml
+++ b/infra/soar/es.yml
@@ -168,9 +168,14 @@ Resources:
   #     Roles:
   #       authenticated: !Ref AuthenticatedRole
 
+
+
 Outputs:
   UserPoolUrl:
     Value: !GetAtt CognitoUserPool.ProviderURL
     Export:
       Name: !Join [ ':', [ !Ref 'AWS::StackName', 'UserPoolUrl' ] ]
-
+  DomainEndpoint:
+    Value: !GetAtt ElasticsearchDomain.DomainEndpoint
+    Export:
+      Name: !Sub "${AWS::StackName}:DomainEndpoint"
