--- a/mythical-mysfits/mysfits-service/buildspec.yml
+++ b/mythical-mysfits/mysfits-service/buildspec.yml
@@ -15,6 +15,10 @@ phases:
       # instances in your AWS CodeBuild project.
       - apt update -y
       - apt install -y jq
+      - |-
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.0.30.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
