--- a/mythical-mysfits/mysfits-service/buildspec.yml
+++ b/mythical-mysfits/mysfits-service/buildspec.yml
@@ -19,7 +19,12 @@ phases:
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.0.30.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
         sudo ./aws/install
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - |-
+        aws ecr get-login-password \
+            --region <region> \
+            | docker login \
+              --username AWS \
+              --password-stdin "${AWS_ACCOUNT_ID}.dkr.ecr."${AWS_DEFAULT_REGION}".amazonaws.com
   build:
     commands:
       - cd mythical-mysfits/mysfits-service/
