--- a/mythical-mysfits/mysfits-service/buildspec.yml
+++ b/mythical-mysfits/mysfits-service/buildspec.yml
@@ -21,7 +21,7 @@ phases:
         sudo ./aws/install
       - |-
         aws ecr get-login-password \
-            --region <region> \
+            --region "${AWS_DEFAULT_REGION}" \
             | docker login \
               --username AWS \
               --password-stdin "${AWS_ACCOUNT_ID}.dkr.ecr."${AWS_DEFAULT_REGION}".amazonaws.com
