--- a/services/codepipeline-notifier/Makefile
+++ b/services/codepipeline-notifier/Makefile
@@ -5,4 +5,4 @@ deploy_qa: build
 	AWS_PROFILE=qa sam deploy --config-env qa --parameter-overrides "ParameterKey=AwsEnvironment,ParameterValue=qa"
 
 invoke: build
-	sam local invoke -e events/s4_put.json
+	sam local invoke -e events/sns.json
