--- a/services/codepipeline-notifier/Makefile
+++ b/services/codepipeline-notifier/Makefile
@@ -1,7 +1,7 @@
 build:
 	sam build
 
-deploy_qa: build
+deploy-qa: build
 	AWS_PROFILE=qa sam deploy --config-env qa --parameter-overrides "ParameterKey=AwsEnvironment,ParameterValue=qa"
 
 invoke: build
