--- a/services/codepipeline-notifier/template.yaml
+++ b/services/codepipeline-notifier/template.yaml
@@ -9,7 +9,7 @@ Globals:
     Timeout: 3
 
 Resources:
-  HelloWorldFunction:
+  CodePipelineFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https//github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: codepipeline_notifier/
