jt codebuild notifications (#77)
* Codepipeline notifier

* Created notification rule

* 2

* now too many

* notifier

* reduce noise

* app

* Clean up

* updated cicd of soar

--- a/infra/budgets/budgets-stack.yml
+++ b/infra/budgets/budgets-stack.yml
@@ -34,7 +34,7 @@ Resources:
     Type: "AWS::Budgets::Budget"
     Properties:
       Budget:
-        BudgetName: "$100 Budget (exc) Credits"
+        BudgetName: "Including Credits and Free Tier"
         BudgetLimit:
           Amount: 100
           Unit: USD
@@ -153,7 +153,7 @@ Resources:
     Type: "AWS::Budgets::Budget"
     Properties:
       Budget:
-        BudgetName: "$100 Budget (inc) Credits"
+        BudgetName: "WARNING! Excluding Credits."
         BudgetLimit:
           Amount: 100
           Unit: USD
