--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -17,7 +17,6 @@ phases:
       - pwd
       # Build Hello world
       - cd services/hello-world/
-      - "rm *.toml"
       - sam build
       - >-
         sam package
@@ -27,7 +26,6 @@ phases:
       - cd -
       # Build Budget Alarms
       - cd services/budget-alarms/
-      - "rm *.toml"
       - sam build
       - >-
         sed -i "s/AWS_ENVIRONMENT: qa/AWS_ENVIRONMENT: ${AWS_ENVIRONMENT}/g" ./template.yaml
@@ -37,7 +35,15 @@ phases:
         --output-template-file ./transformed.yaml
         --s3-bucket "${LAMBDA_ARTIFACTS_BUCKET}"
       - cd -
-      # TODO: Build more artifacts here
+      # CodePipeline notifier
+      - cd services/codepipeline-notifier
+      - sam build
+      - >-
+        sam package
+        --template-file ./template.yaml
+        --output-template-file ./transformed.yaml
+        --s3-bucket "${LAMBDA_ARTIFACTS_BUCKET}"
+      - cd -
 
 
   post_build:
@@ -48,3 +54,4 @@ artifacts:
   files:
     - ./services/hello-world/transformed.yaml
     - ./services/budget-alarms/transformed.yaml
+    - ./services/codepipeline-notifier/transformed.yaml
