--- a/services/budget-alarms/Makefile
+++ b/services/budget-alarms/Makefile
@@ -1,8 +1,8 @@
 build:
 	sam build
 
-deploy_qa: build
+deploy-qa: build
 	AWS_PROFILE=qa sam deploy --config-env qa --parameter-overrides "ParameterKey=AwsEnvironment,ParameterValue=qa"
 
 invoke: build
-	sam local invoke -e events/s4_put.json
+	sam local invoke -e events/sns.json
