--- a/mythical-mysfits/streaming-service/real-time-streaming.yml
+++ b/mythical-mysfits/streaming-service/real-time-streaming.yml
@@ -45,6 +45,11 @@ Resources:
     Properties:
       VersioningConfiguration:
         Status: Enabled
+      LifecycleConfiguration: 
+        Rules:
+          - Id: ClicksteamLifecycle
+            Status: Enabled
+            ExpirationInDays: '7'
 
   # The IAM role for the above Firehose Delivery Stream.
   FirehoseDeliveryRole:
