--- a/services/route-53/route53.yml
+++ b/services/route-53/route53.yml
@@ -19,7 +19,7 @@ Resources:
   #        Comment: 'Route 53 for web app'
   #      Name: !Ref DomainName
   
-  #create a certificate
+  #create a certificate with the dns, working!
   Certificate:
     Type: AWS::CertificateManager::Certificate
     Properties:
@@ -34,7 +34,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-        - DomainName: mybucket.s3.amazonaws.com
+        - DomainName: !
           Id: myS3Origin
           S3OriginConfig:
             OriginAccessIdentity: origin-access-identity/cloudfront/E127EXAMPLE51Z
@@ -47,7 +47,6 @@ Resources:
           Prefix: myprefix
         Aliases:
         - mysite.example.com
-        - yoursite.example.com
         DefaultCacheBehavior:
           AllowedMethods:
           - DELETE
