--- a/services/route-53/route53.yml
+++ b/services/route-53/route53.yml
@@ -9,7 +9,11 @@ Parameters:
   HostedZoneId:
     Type: String
   
+  HostedZoneIdS3:
+    Type: String
 
+
+Description: Deploy ssl and cloudfront with logging to secure the serveless site
 Resources:
   #creates a dns host zone 
   #DNS: 
@@ -19,58 +23,25 @@ Resources:
   #        Comment: 'Route 53 for web app'
   #      Name: !Ref DomainName
   
-  #create a certificate with the dns, working!
-  Certificate:
-    Type: AWS::CertificateManager::Certificate
+  #Add a dns for the s3 bucket
+  DNSEntries:
+    Type: AWS::Route53::RecordSetGroup
     Properties:
-      DomainName: !Ref DomainName
-      ValidationMethod: DNS
+      HostedZoneName: !Sub "${DomainName}."
+      RecordSets:
+        - AliasTarget:
+            HostedZoneId: !Ref HostedZoneIdS3
+            DNSName: !Ref S3Record
+          Name: !Sub "app.${DomainName}"
+          Type: A
+  
+  #create a ssl cert
+  ACMCertificate: 
+    Type: "AWS::CertificateManager::Certificate"
+    Properties: 
+      DomainName: !Sub "*.${DomainName}"
       DomainValidationOptions:
-        - DomainName: !Ref DomainName
-          HostedZoneId: !Ref HostedZoneId
-
-  #using the certificate generated above, create a cloudfront for s3 with ssl
-    Type: AWS::CloudFront::Distribution
-    Properties:
-      DistributionConfig:
-        Origins:
-        - DomainName: !
-          Id: myS3Origin
-          S3OriginConfig:
-            OriginAccessIdentity: origin-access-identity/cloudfront/E127EXAMPLE51Z
-        Enabled: 'true'
-        Comment: Some comment
-        DefaultRootObject: index.html
-        Logging:
-          IncludeCookies: 'false'
-          Bucket: mylogs.s3.amazonaws.com
-          Prefix: myprefix
-        Aliases:
-        - mysite.example.com
-        DefaultCacheBehavior:
-          AllowedMethods:
-          - DELETE
-          - GET
-          - HEAD
-          - OPTIONS
-          - PATCH
-          - POST
-          - PUT
-          TargetOriginId: myS3Origin
-          ForwardedValues:
-            QueryString: 'false'
-            Cookies:
-              Forward: none
-          TrustedSigners:
-          - 1234567890EX
-          - 1234567891EX
-          ViewerProtocolPolicy: allow-all
-        PriceClass: PriceClass_200
-        Restrictions:
-          GeoRestriction:
-            RestrictionType: whitelist
-            Locations:
-            - AQ
-            - CV
-        ViewerCertificate:
-          CloudFrontDefaultCertificate: 'true'
+            - DomainName: !Ref DomainName
+              HostedZoneId: !Ref HostedZoneId
+      ValidationMethod: DNS 
+    DependsOn: DNSEntries
