going to sleeping, adding enhancement tomorrow: git push

--- a/services/route-53/route53.yml
+++ b/services/route-53/route53.yml
@@ -1,4 +1,3 @@
----
 Parameters:
   DomainName:
     Type: String
@@ -31,6 +30,8 @@ Resources:
       RecordSets:
         - AliasTarget:
             HostedZoneId: !Ref HostedZoneIdS3
+            #need to reference the cloud front record here, to patch up tomorrow
+            #DNSName: !GetAtt CDN.DomainName
             DNSName: !Ref S3Record
           Name: !Sub "app.${DomainName}"
           Type: A
