--- a/services/route-53/cdn.yml
+++ b/services/route-53/cdn.yml
@@ -1,8 +1,11 @@
-Parameter:
+Parameters:
   CertificateArn:
-      Type: String
-    
+    Type: String
   BucketName:
+    Type: String
+  DomainName:
+    Type: String
+  S3Hosting:
     Type: String
 
 Description: CDN stack that ties domain name and acm together
@@ -13,21 +16,30 @@ Resources:
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Sub "Cloudfront Origin identity for ${DomainName}"
-  
+
   CDN:
     Type: "AWS::CloudFront::Distribution"
     Properties:
       DistributionConfig:
         Aliases:
-          - !Ref DomainName
+          - !Sub "app.${DomainName}"
         DefaultCacheBehavior:
-          TargetOriginId: !Sub "S3-origin-${S3Hosting}"
+          AllowedMethods:
+              - GET
+              - HEAD
+          CachedMethods:
+              - GET
+              - HEAD
+          ForwardedValues:
+            QueryString: True
+          TargetOriginId: !Sub "S3-${BucketName}"
           ViewerProtocolPolicy: redirect-to-https
         DefaultRootObject: index.html
         Enabled: True
         Origins:
-          - DomainName: !GetAtt S3Hosting.RegionalDomainName
-            Id: !Sub "S3-origin-${S3Hosting}"
+          #hardcoding the region bucket url, need to use regrex for subsitution later
+          - DomainName: !Sub "${BucketName}.s3.us-east-1.amazonaws.com"
+            Id: !Sub "S3-${BucketName}"
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CDNOriginIdentity}"
         PriceClass: PriceClass_100
@@ -35,3 +47,18 @@ Resources:
           AcmCertificateArn: !Ref CertificateArn
           MinimumProtocolVersion: TLSv1.2_2018
           SslSupportMethod: sni-only
+      
+      #this may not work, need to confirm tomorrow
+      S3HostingBucketPolicy:
+        Type: AWS::S3::BucketPolicy
+        Properties:
+          Bucket: !Ref S3Hosting
+          PolicyDocument:
+            Statement:
+              - Action:
+                  - "s3:GetObject"
+                Effect: Allow
+                Principal:
+                  AWS: !Sub "arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity ${CDNOriginIdentity}"
+                Resource: !Sub "arn:aws:s3:::${S3Hosting}/*"
+  
